Fix issue with the Speed Score info tooltip to be cut off

--- a/projects/plugins/boost/app/assets/src/css/main/dashboard.scss
+++ b/projects/plugins/boost/app/assets/src/css/main/dashboard.scss
@@ -23,7 +23,6 @@
 .jb-section--scores {
 	margin-bottom: $halfling;
   	position: relative;
-  	overflow: hidden;
 }
 
 .jb-section--main {
